<resources>
    <string name="app_name">SQLite Practice</string>
    <string name="phone_number">Phone Number</string>
    <string name="residence">Residence</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="save_info">Save info</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="search_id">Search ID</string>
    <string name="take_picture">Take Picture</string>
    <string name="enter_id_to_delete">Enter Id to Delete</string>
    <string name="delete">Delete</string>
</resources>
