<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#FFFFFF"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.awake.sqlitepractice.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/name"
            />

        <EditText
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/residence"
            android:ems="10"
            android:id="@+id/place"
            android:layout_above="@+id/id"
        />

        <EditText
            android:hint="Enter Your ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/id"
            android:layout_above="@+id/phone"
             />

        <Button
            android:onClick="Add"
            android:background="@color/btn_green"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/save_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif-medium" />

        <Button
            android:onClick="Search"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/button"
            android:textStyle="normal|bold" />

        <Button
            android:onClick="process"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:text="@string/take_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btncamera"
            android:textStyle="normal|bold" />

        <Button
            android:onClick="Delete"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:background="@android:color/holo_red_dark"
            android:textStyle="normal|bold" />
    </LinearLayout>

</RelativeLayout>
